# webrtcdemo-desktop

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp
module/: MyPeerObserver.cpp  MyPeerObserver.h  SimplePeer.cpp  SimplePeer.h  WebsocketClient.cpp  WebsocketClient.h  pushclient.cpp  pushclient.h  signaling_client.cpp  signaling_client.h
ui/: widg.cpp  widg.h  widg.ui
